<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.blanksystem</groupId>
        <artifactId>blank-service</artifactId>
        <version>1.0.0-alpha</version>
    </parent>

    <artifactId>blank-container</artifactId>

    <properties>
        <start-class>com.blanksystem.blank.service.container.Application</start-class>
        <docker.from.image.platform.os>linux</docker.from.image.platform.os>
        <docker.from.image.platform.architecture>arm64</docker.from.image.platform.architecture>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.blanksystem</groupId>
            <artifactId>blank-application-service</artifactId>
        </dependency>
        <dependency>
            <groupId>com.blanksystem</groupId>
            <artifactId>blank-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.blanksystem</groupId>
            <artifactId>blank-data-access</artifactId>
        </dependency>
        <dependency>
            <groupId>com.blanksystem</groupId>
            <artifactId>blank-message-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.blanksystem</groupId>
            <artifactId>blank-external</artifactId>
        </dependency>
        <dependency>
            <groupId>com.lg5.spring</groupId>
            <artifactId>lg5-spring-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.lg5.spring</groupId>
            <artifactId>lg5-spring-logger</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-starter-sleuth</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- tests -->
        <dependency>
            <groupId>com.lg5.spring</groupId>
            <artifactId>lg5-spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.lg5.spring</groupId>
            <artifactId>lg5-spring-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <!--<plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>-->
        </plugins>

    </build>
    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

</project>